上傳檔案與裁剪縮圖
1. 表單上傳檔案，上傳→搬移→更改檔名
2. 製作縮圖﹙class.upload.php﹚
3. 加入管理介面，會員才看得到的管理項目

--- a/assets/css/diy.css
+++ b/assets/css/diy.css
@@ -104,11 +104,18 @@ h2,.h2 {  font-weight: 300; }
   padding-bottom: 2rem;
   font-size: 1.4rem;
 }
+.post.single .post-content p {
+  font-size: 1.4rem;
+}
 
 .post.item .post-content p {
   font-size: 1.2rem;
   line-height: 1.6rem;
   color: #696969;
+}
+.post.item .post-content .post-title {
+  font-size: 1.6rem;
+  line-height: 1.8rem;
 }
 
 .post.single .post-content > p,
